react-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: front-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: front
  template:
    metadata:
      labels:
        component: front
    spec:
      containers:
        - name: react-front-end
          image: shajalahamedcse/react-front:0.0.1
          ports:
            - containerPort: 80
