svc1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-svc1
spec:
  selector:
    matchLabels:
      app: svc1
  replicas: 1
  template:
    metadata:
      labels:
        app: svc1
    spec:
      containers:
      - name: svc1
        image: shajalahamedcse/python-svc1:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
