py-service.yml
apiVersion: v1
kind: Service
metadata:
  name: py-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
