react-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-back
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    component: back
