react-frontend-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: react-front

spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: front
