svc1-service.yml


apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
  selector:
    app: svc1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
